Fix issue where minimizing a browser window to it's smallest width caused side-bar to overlap with the book library section
Adjusted smallest media query up to 540px to adjust the browser window before that occurs

--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,7 @@ button.delete-btn:active {
     }
 }
 
-@media (max-width: 415px) {
+@media (max-width: 540px) {
     html {
         font-size: 14px;
     }
